update_app swagger dec
